@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
left to right direction
class RegisterTypeOfTestUI{
  
}

class RegisterTypeOfTestController{
 +create(code, description, collecting methods, parameterCat)
 +saveTypeOfTest()
}

class Company{
 -designation
  
 +create(code, description, collecting methods, parameterCat)
 +validateTypeOfTest(typeOfTest)
 +addTypeOfTest(typeOfTest)
 +saveTypeOfTest(typeOfTest)
}

class TypeOfTest{
 +create(code, description, collecting methods, parameterCat)
}



RegisterTypeOfTestUI ..> RegisterTypeOfTestController
RegisterTypeOfTestController ..> Company
Company "*" -> "1" TypeOfTest : does

@enduml
